--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
+astroid==3.1.0
 blinker==1.7.0
 click==8.1.7
+dill==0.3.8
 et-xmlfile==1.1.0
 Flask==3.0.2
+isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
 joblib==1.3.2
 MarkupSafe==2.1.5
+mccabe==0.7.0
 nltk==3.8.1
 numpy==1.26.4
 openpyxl==3.1.2
 pandas==2.2.1
+platformdirs==4.2.0
+pylint==3.1.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 regex==2023.12.25
 six==1.16.0
+tomlkit==0.12.4
 tqdm==4.66.2
 tzdata==2024.1
 Werkzeug==3.0.1
