--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ click==8.1.7
 dill==0.3.8
 et-xmlfile==1.1.0
 Flask==3.0.2
+h11==0.14.0
+importlib_metadata==7.0.2
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -13,6 +15,7 @@ mccabe==0.7.0
 nltk==3.8.1
 numpy==1.26.4
 openpyxl==3.1.2
+packaging==24.0
 pandas==2.2.1
 platformdirs==4.2.0
 pylint==3.1.0
@@ -20,7 +23,10 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 regex==2023.12.25
 six==1.16.0
+tomli==2.0.1
 tomlkit==0.12.4
 tqdm==4.66.2
+typing_extensions==4.10.0
 tzdata==2024.1
 Werkzeug==3.0.1
+zipp==3.18.1
