--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ blinker==1.7.0
 click==8.1.7
 dill==0.3.8
 et-xmlfile==1.1.0
+exceptiongroup==1.2.0
 Flask==3.0.2
 h11==0.14.0
 importlib_metadata==7.0.2
+iniconfig==2.0.0
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -18,7 +20,9 @@ openpyxl==3.1.2
 packaging==24.0
 pandas==2.2.1
 platformdirs==4.2.0
+pluggy==1.4.0
 pylint==3.1.0
+pytest==8.1.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 regex==2023.12.25
